--- a/classif.ipynb
+++ b/classif.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "[10000 rows x 3 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
        "5.0  4.0  I thought you might like these:\\n1) Slim Down ...     1"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,16 +382,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Identifying Duplicates in Enron Dataset\n",
+    "## Process Enron Dataset\n",
     "\n",
-    "As the Email-Spam-Dataset contains Enron emails marked as spam, we should remove these from the Enron dataset. Then we can relatively safely assume everything else in the Enron dataset is non-spam\n",
+    "Extract the message bodies from the Enron dataset\n",
     "\n",
     "The Enron dataset is very large. To save RAM, the first time you process it you can save it to a csv, then restart the jupyter and load it from CSV (so temporary rows are not stored in RAM)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,27 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['file', 'message']"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(pd.read_csv('./kaggle-datasets/The-Enron-Email-Dataset/emails.csv', nrows=1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,141 +438,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "#comment if you're running enron for first time\n",
     "dfEnronFull = load_processed_enron()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>message</th>\n",
-       "      <th>id</th>\n",
-       "      <th>Label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Here is our forecast\\n\\n</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Traveling to have a business meeting takes the...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>test successful.  way to go!!!</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Randy,\\n\\n Can you send me a schedule of the s...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Let's shoot for Tuesday at 11:45.</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>517396</th>\n",
-       "      <td>This is a trade with OIL-SPEC-HEDGE-NG (John L...</td>\n",
-       "      <td>517397</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>517397</th>\n",
-       "      <td>Some of my position is with the Alberta Term b...</td>\n",
-       "      <td>517398</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>517398</th>\n",
-       "      <td>2\\n\\n -----Original Message-----\\nFrom: \\tDouc...</td>\n",
-       "      <td>517399</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>517399</th>\n",
-       "      <td>Analyst\\t\\t\\t\\t\\tRank\\n\\nStephane Brodeur\\t\\t\\...</td>\n",
-       "      <td>517400</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>517400</th>\n",
-       "      <td>i think the YMCA has a class that is for peopl...</td>\n",
-       "      <td>517401</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>517401 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                  message      id  Label\n",
-       "0                               Here is our forecast\\n\\n        1      0\n",
-       "1       Traveling to have a business meeting takes the...       2      0\n",
-       "2                          test successful.  way to go!!!       3      0\n",
-       "3       Randy,\\n\\n Can you send me a schedule of the s...       4      0\n",
-       "4                     Let's shoot for Tuesday at 11:45.         5      0\n",
-       "...                                                   ...     ...    ...\n",
-       "517396  This is a trade with OIL-SPEC-HEDGE-NG (John L...  517397      0\n",
-       "517397  Some of my position is with the Alberta Term b...  517398      0\n",
-       "517398  2\\n\\n -----Original Message-----\\nFrom: \\tDouc...  517399      0\n",
-       "517399  Analyst\\t\\t\\t\\t\\tRank\\n\\nStephane Brodeur\\t\\t\\...  517400      0\n",
-       "517400  i think the YMCA has a class that is for peopl...  517401      0\n",
-       "\n",
-       "[517401 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dfEnronFull"
    ]
   },
   {
@@ -607,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1003,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1014,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1031,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1068,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1161,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1175,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1194,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1214,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1242,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1253,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1262,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1271,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1280,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1289,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1297,21 +1148,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 57,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "dEnronSpam = EmailDataset(dfEnron, preprocessing=[\"lower\",\"newlines\",\"stemming\",\"returns\"], feature_selection=[\"nltk_tokenize\", \"nltk_stoplist\", \"remove_short_tokens\", \"custom_stoplist\"], retList=False)"
+    "## Identifying Duplicates in Enron Dataset\n",
+    "\n",
+    "As the Email-Spam-Dataset contains Enron emails marked as spam, we should remove these from the Enron dataset. Then we can relatively safely assume everything else in the Enron dataset is non-spam\n",
+    "\n",
+    "The Enron dataset is very large. To save RAM, the first time you process it you can save it to a csv, then restart the jupyter and load it from CSV (so temporary rows are not stored in RAM)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "def strip_spam_from_enron():\n",
+    "    dEnronSpam = EmailDataset(dfEnron, preprocessing=[\"lower\",\"newlines\",\"stemming\",\"returns\"], feature_selection=[\"nltk_tokenize\", \"nltk_stoplist\", \"remove_short_tokens\", \"custom_stoplist\"], retList=False)\n",
+    "    \n",
     "    dEnron = EmailDataset(dfEnronFull, preprocessing=[\"lower\",\"newlines\",\"stemming\",\"returns\"], feature_selection=[\"nltk_tokenize\", \"nltk_stoplist\", \"remove_short_tokens\", \"custom_stoplist\"], retList=False, bodyColumn='message')\n",
     "\n",
     "    #remove the items that appear in spam list, as best we can by comparing preprocessed email bodies - might not catch all of them\n",
@@ -1326,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1336,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1346,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1354,12 +1217,32 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Combine the datasets together\n",
+    "\n",
+    "Once loaded the ham-only Enron (i.e. duplicates removed), combine them all and apply preprocessing (applying it twice to enron shouldn't matter)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dEnron = EmailDataset(dfEnronFull, skip_process_phrases=True, skip_data_loading=True)"
+    "all_dfs = [dEnronHam, dfEnron, dfLing, dfSpam]\n",
+    "dfAll = pd.concat(dfs).dropna(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fullDataset = EmailDataset(dfAll, preprocessing=[\"lower\",\"newlines\",\"stemming\",\"returns\"], feature_selection=[\"nltk_tokenize\", \"nltk_stoplist\", \"remove_short_tokens\"], retList=False)"
    ]
   },
   {
