Word2vec on full dataset

--- a/classif.ipynb
+++ b/classif.ipynb
@@ -1255,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1264,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1301,12 +1301,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# w2v_1 = Word2Vec(d.pp_df['ppBody'])\n",
-    "# w2v_1.create('w2v_1', callbacks=[epoch_logger])"
+    "def create_word2vec(data, name):\n",
+    "    \"\"\"data: the ppBody column of a Dataset's pp_df dataframe\n",
+    "    name: where to save the model\"\"\"\n",
+    "    w2v_model = Word2Vec(data)\n",
+    "    w2v_model.create(name, callbacks=[epoch_logger])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch #0 start\n",
+      "Epoch #0 end\n",
+      "Epoch #1 start\n",
+      "Epoch #1 end\n",
+      "Epoch #2 start\n",
+      "Epoch #2 end\n",
+      "Epoch #3 start\n",
+      "Epoch #3 end\n",
+      "Epoch #4 start\n",
+      "Epoch #4 end\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_word2vec(fullDataset.pp_df['ppBody'], 'fullDataw2v')"
    ]
   },
   {
