--- a/classif.ipynb
+++ b/classif.ipynb
@@ -1301,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1309,33 +1309,44 @@
     "    \"\"\"data: the ppBody column of a Dataset's pp_df dataframe\n",
     "    name: where to save the model\"\"\"\n",
     "    w2v_model = Word2Vec(data)\n",
-    "    w2v_model.create(name, callbacks=[epoch_logger])"
+    "    w2v_model.create(name, callbacks=[epoch_logger])\n",
+    "\n",
+    "    return w2v_model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch #0 start\n",
-      "Epoch #0 end\n",
-      "Epoch #1 start\n",
-      "Epoch #1 end\n",
-      "Epoch #2 start\n",
-      "Epoch #2 end\n",
-      "Epoch #3 start\n",
-      "Epoch #3 end\n",
-      "Epoch #4 start\n",
-      "Epoch #4 end\n"
+      "Epoch #10 start\n",
+      "Epoch #10 end\n",
+      "Epoch #11 start\n",
+      "Epoch #11 end\n",
+      "Epoch #12 start\n",
+      "Epoch #12 end\n",
+      "Epoch #13 start\n",
+      "Epoch #13 end\n",
+      "Epoch #14 start\n",
+      "Epoch #14 end\n"
      ]
     }
    ],
    "source": [
-    "create_word2vec(fullDataset.pp_df['ppBody'], 'fullDataw2v')"
+    "w2v1 = create_word2vec(fullDataset.pp_df['ppBody'], 'fullDataw2v')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w2v1"
    ]
   },
   {
@@ -1352,8 +1363,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "w2v_1 = Word2Vec(d.pp_df['ppBody'])\n",
-    "w2v_1.load('./Word-Representations/w2v_1.model')"
+    "# w2v_1 = Word2Vec(d.pp_df['ppBody'])\n",
+    "# w2v_1.load('./Word-Representations/w2v_1.model')"
    ]
   },
   {
@@ -1366,47 +1377,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "classifier_1 = Classifier(d, w2v_1)"
+    "classifier_1 = Classifier(fullDataset, w2v1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/mac/.local/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:460: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "classifier_1.train()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model accuracy: 0.6890413896633069\n"
+      "Model accuracy: 0.6178425906069054\n"
      ]
     }
    ],
