Ingest Sharma dataset

--- a/classif.ipynb
+++ b/classif.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,140 +129,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "dfEnron = pd.read_csv('./kaggle-datasets/Email-Spam-Dataset/enronSpamSubset.csv', names=spam_col_names).tail(-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>Body</th>\n",
-       "      <th>Label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2469.0</th>\n",
-       "      <td>2469</td>\n",
-       "      <td>Subject: stock promo mover : cwtd\\n * * * urge...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5063.0</th>\n",
-       "      <td>5063</td>\n",
-       "      <td>Subject: are you listed in major search engine...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12564.0</th>\n",
-       "      <td>12564</td>\n",
-       "      <td>Subject: important information thu , 30 jun 20...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2796.0</th>\n",
-       "      <td>2796</td>\n",
-       "      <td>Subject: = ? utf - 8 ? q ? bask your life with...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1468.0</th>\n",
-       "      <td>1468</td>\n",
-       "      <td>Subject: \" bidstogo \" is places to go , things...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26222.0</th>\n",
-       "      <td>26222</td>\n",
-       "      <td>Subject: monday 22 nd oct\\n louise ,\\n do you ...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18630.0</th>\n",
-       "      <td>18630</td>\n",
-       "      <td>Subject: missing bloomberg deals\\n stephanie -...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18451.0</th>\n",
-       "      <td>18451</td>\n",
-       "      <td>Subject: eops salary survey questionnaire\\n we...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21955.0</th>\n",
-       "      <td>21955</td>\n",
-       "      <td>Subject: q 3 comparison\\n hi louise ,\\n i have...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32062.0</th>\n",
-       "      <td>32062</td>\n",
-       "      <td>Subject: confidential folder to safely pass in...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>10000 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            id                                               Body Label\n",
-       "2469.0    2469  Subject: stock promo mover : cwtd\\n * * * urge...     1\n",
-       "5063.0    5063  Subject: are you listed in major search engine...     1\n",
-       "12564.0  12564  Subject: important information thu , 30 jun 20...     1\n",
-       "2796.0    2796  Subject: = ? utf - 8 ? q ? bask your life with...     1\n",
-       "1468.0    1468  Subject: \" bidstogo \" is places to go , things...     1\n",
-       "...        ...                                                ...   ...\n",
-       "26222.0  26222  Subject: monday 22 nd oct\\n louise ,\\n do you ...     0\n",
-       "18630.0  18630  Subject: missing bloomberg deals\\n stephanie -...     0\n",
-       "18451.0  18451  Subject: eops salary survey questionnaire\\n we...     0\n",
-       "21955.0  21955  Subject: q 3 comparison\\n hi louise ,\\n i have...     0\n",
-       "32062.0  32062  Subject: confidential folder to safely pass in...     0\n",
-       "\n",
-       "[10000 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dfEnron"
    ]
   },
   {
@@ -275,17 +146,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#merge datasets\n",
-    "dfs = [dfSA, dfEnron, dfLing]\n",
-    "dfSpam = pd.concat(dfs).dropna(axis=0)"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -295,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -326,33 +186,33 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1.0</th>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Body</td>\n",
+       "      <td>Label</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>\\nSave up to 70% on Life Insurance.\\nWhy Spend...</td>\n",
+       "      <td>Subject: great part-time or summer job !\\n \\n ...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2.0</th>\n",
+       "      <th>2</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>1) Fight The Risk of Cancer!\\nhttp://www.adcli...</td>\n",
+       "      <td>Subject: auto insurance rates too high ?\\n \\n ...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3.0</th>\n",
+       "      <th>3</th>\n",
        "      <td>2.0</td>\n",
-       "      <td>1) Fight The Risk of Cancer!\\nhttp://www.adcli...</td>\n",
+       "      <td>Subject: do want the best and economical hunti...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4.0</th>\n",
+       "      <th>4</th>\n",
        "      <td>3.0</td>\n",
-       "      <td>##############################################...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5.0</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>I thought you might like these:\\n1) Slim Down ...</td>\n",
+       "      <td>Subject: email 57 million people for $ 99\\n \\n...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -360,21 +220,289 @@
        "</div>"
       ],
       "text/plain": [
-       "      id                                               Body Label\n",
-       "1.0  0.0  \\nSave up to 70% on Life Insurance.\\nWhy Spend...     1\n",
-       "2.0  1.0  1) Fight The Risk of Cancer!\\nhttp://www.adcli...     1\n",
-       "3.0  2.0  1) Fight The Risk of Cancer!\\nhttp://www.adcli...     1\n",
-       "4.0  3.0  ##############################################...     1\n",
-       "5.0  4.0  I thought you might like these:\\n1) Slim Down ...     1"
+       "    id                                               Body  Label\n",
+       "0  NaN                                               Body  Label\n",
+       "1  0.0  Subject: great part-time or summer job !\\n \\n ...      1\n",
+       "2  1.0  Subject: auto insurance rates too high ?\\n \\n ...      1\n",
+       "3  2.0  Subject: do want the best and economical hunti...      1\n",
+       "4  3.0  Subject: email 57 million people for $ 99\\n \\n...      1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfSpam.head()"
+    "dfLing.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfEdu = pd.read_csv('./educational-institute-dataset/PhishingEmailData.csv', encoding=\"ISO-8859-1\", usecols=['Email_Subject', 'Email_Content', 'Closing_Remarks'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Email_Subject</th>\n",
+       "      <th>Email_Content</th>\n",
+       "      <th>Closing_Remarks</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>URGENT REQUEST</td>\n",
+       "      <td>Are you available ?\\nNo calls text only 951307...</td>\n",
+       "      <td>BEST REGARDS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Quick question</td>\n",
+       "      <td>I'm in a meeting and need help getting some Am...</td>\n",
+       "      <td>na</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>******Part time home work assistant needed******</td>\n",
+       "      <td>Hello RECIPIENT\\n\\nI am urgently seeking for a...</td>\n",
+       "      <td>Sincerely</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Ê vendor payment</td>\n",
+       "      <td>Are you around? I need to pay a vendor with th...</td>\n",
+       "      <td>na</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Quick question</td>\n",
+       "      <td>I'm in a meeting and need help getting some Am...</td>\n",
+       "      <td>na</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>184</th>\n",
+       "      <td>Sales Contract PO:#224906999</td>\n",
+       "      <td>2 new message</td>\n",
+       "      <td>thanks</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>185</th>\n",
+       "      <td>new bill from Ian</td>\n",
+       "      <td>your bill is here</td>\n",
+       "      <td>thank you</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>186</th>\n",
+       "      <td>Re: Payment Invoice</td>\n",
+       "      <td>please check your</td>\n",
+       "      <td>Thank you</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>187</th>\n",
+       "      <td>KSU Infringement</td>\n",
+       "      <td>email has been reposted , regulation</td>\n",
+       "      <td>Sincerely</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>188</th>\n",
+       "      <td>We recieved your request</td>\n",
+       "      <td>request to deactivate</td>\n",
+       "      <td>na</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>189 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        Email_Subject  \\\n",
+       "0                                      URGENT REQUEST   \n",
+       "1                                      Quick question   \n",
+       "2    ******Part time home work assistant needed******   \n",
+       "3                                    Ê vendor payment   \n",
+       "4                                      Quick question   \n",
+       "..                                                ...   \n",
+       "184                      Sales Contract PO:#224906999   \n",
+       "185                                 new bill from Ian   \n",
+       "186                               Re: Payment Invoice   \n",
+       "187                                  KSU Infringement   \n",
+       "188                          We recieved your request   \n",
+       "\n",
+       "                                         Email_Content Closing_Remarks  \n",
+       "0    Are you available ?\\nNo calls text only 951307...    BEST REGARDS  \n",
+       "1    I'm in a meeting and need help getting some Am...              na  \n",
+       "2    Hello RECIPIENT\\n\\nI am urgently seeking for a...     Sincerely    \n",
+       "3    Are you around? I need to pay a vendor with th...              na  \n",
+       "4    I'm in a meeting and need help getting some Am...              na  \n",
+       "..                                                 ...             ...  \n",
+       "184                                      2 new message          thanks  \n",
+       "185                                  your bill is here       thank you  \n",
+       "186                                 please check your        Thank you  \n",
+       "187               email has been reposted , regulation       Sincerely  \n",
+       "188                              request to deactivate              na  \n",
+       "\n",
+       "[189 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfEdu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfEdu['Body'] = dfEdu[dfEdu.columns[1:]].apply(\n",
+    "    lambda x: '\\n'.join(x.dropna().astype(str)),\n",
+    "    axis=1\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Body</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Are you available ?\\nNo calls text only 951307...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>I'm in a meeting and need help getting some Am...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Hello RECIPIENT\\n\\nI am urgently seeking for a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Are you around? I need to pay a vendor with th...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>I'm in a meeting and need help getting some Am...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>184</th>\n",
+       "      <td>2 new message\\nthanks</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>185</th>\n",
+       "      <td>your bill is here\\nthank you</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>186</th>\n",
+       "      <td>please check your \\nThank you</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>187</th>\n",
+       "      <td>email has been reposted , regulation\\nSincerely</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>188</th>\n",
+       "      <td>request to deactivate\\nna</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>189 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  Body\n",
+       "0    Are you available ?\\nNo calls text only 951307...\n",
+       "1    I'm in a meeting and need help getting some Am...\n",
+       "2    Hello RECIPIENT\\n\\nI am urgently seeking for a...\n",
+       "3    Are you around? I need to pay a vendor with th...\n",
+       "4    I'm in a meeting and need help getting some Am...\n",
+       "..                                                 ...\n",
+       "184                              2 new message\\nthanks\n",
+       "185                       your bill is here\\nthank you\n",
+       "186                      please check your \\nThank you\n",
+       "187    email has been reposted , regulation\\nSincerely\n",
+       "188                          request to deactivate\\nna\n",
+       "\n",
+       "[189 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfEdu.drop(columns=['Email_Subject', 'Email_Content', 'Closing_Remarks'])"
    ]
   },
   {
