--- a/classif.ipynb
+++ b/classif.ipynb
@@ -1397,6 +1397,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dAll.pp_df.to_csv('./Processed-Datasets/all-preprocessed.csv')"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
